# ClipJits

./: .env.example  .gitignore  CHANGES.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  cj.bat  pyproject.toml
clipjits/: __init__.py  __main__.py  cli.py  clip.py  config.py  download.py  process.py  utils.py
mpv-scripts/: clip-marker.lua
