[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clipjits"
version = "0.1.1"
description = "A two-step CLI tool for creating BJJ technique cards from instructional videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.1.17",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20231117",
    "openai>=1.59.5",
    "anthropic>=0.42.0",
    "click>=8.1.8",
    "python-dotenv>=1.0.1",
    "pillow>=11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=25.1.0",
    "ruff>=0.9.2",
]

[project.scripts]
clipjits = "clipjits.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["clipjits*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
